# prebuilts_aosp_libs

./: LICENSE  update_prebuilts.sh
asdk_libs/sdk/shared_library/arm/: BUILD.gn
host_tools/releasetools/: build_image.py  common.py
minisys/: system_image_info.txt  userdata_image_info.txt  vendor_image_info.txt
minisys/root/: init.environ.rc  init.rc  init.usb.configfs.rc  init.usb.rc
minisys/system/: build.prop
minisys/system/etc/: boot-image.prof  ld.config.vndk_lite.txt  prop.default
minisys/system/etc/selinux/: plat_file_contexts  plat_property_contexts  plat_sepolicy.cil  plat_sepolicy_and_mapping.sha256  plat_service_contexts
minisys/system/xbin/: su
